// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SitesGridItem> Custom render 1`] = `
<div
  className="css-lvc9r-container"
>
  <a
    className="css-1ctre4x-ThumbnailLink e19s2eol0"
    href="/home/test_slug"
    title="Visit Dashboard"
  >
    <div
      className="site-thumbnail site-thumbnail-loading css-ut2tya-DEFAULT_CLASSNAME css-1mwzofc-siteThumbnail css-1uizeh6-disallowSelection"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="site-thumbnail-icon"
      >
        <div
          aria-label="Site Icon"
          className="css-k8j3dg-NoIcon e1y9o06l0"
          role="img"
        >
          T
        </div>
      </div>
    </div>
  </a>
  <div>
    <div
      className="css-1xtz7v6-primaryContainer"
    >
      <a
        className="css-6u0p2y-SiteName esmj6c50"
        fontSize={16}
        href="/home/test_slug"
        title="Visit Dashboard"
      >
        The example site
      </a>
    </div>
    <div
      className="css-12bwudn-SitesGridItemSecondary eke2d2q1"
    >
      <a
        className="components-external-link css-d9p5eo-SiteUrl ejzgyku1"
        href=""
        onClick={[Function]}
        rel="external noreferrer noopener"
        target="_blank"
        title=""
      >
        <span
          className="css-1i2o39r-Truncated ejzgyku0"
        />
        <span
          className="components-visually-hidden css-1mm2cvy-View e19lxcc00"
          data-wp-c16t={true}
          data-wp-component="VisuallyHidden"
          style={
            Object {
              "WebkitClipPath": "inset( 50% )",
              "border": 0,
              "clip": "rect(1px, 1px, 1px, 1px)",
              "clipPath": "inset( 50% )",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "width": "1px",
              "wordWrap": "normal",
            }
          }
        >
          (opens in a new tab)
        </span>
        <svg
          aria-hidden={true}
          className="components-external-link__icon css-16iaek2-StyledIcon esh4a730"
          focusable={false}
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`<SitesGridItem> Custom render 2 1`] = `
<div
  className="css-lvc9r-container"
>
  <div>
    <div
      className="site-thumbnail site-thumbnail-loading css-ut2tya-DEFAULT_CLASSNAME css-1mwzofc-siteThumbnail css-1uizeh6-disallowSelection"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="site-thumbnail-icon"
      >
        <div
          aria-label="Site Icon"
          className="css-k8j3dg-NoIcon e1y9o06l0"
          role="img"
        >
          T
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="css-1xtz7v6-primaryContainer"
    >
      <a
        className="css-6u0p2y-SiteName esmj6c50"
        fontSize={16}
      >
        The example site
      </a>
    </div>
    <div
      className="css-12bwudn-SitesGridItemSecondary eke2d2q1"
    >
      <a
        className="components-external-link css-d9p5eo-SiteUrl ejzgyku1"
        href=""
        onClick={[Function]}
        rel="external noreferrer noopener"
        target="_blank"
        title=""
      >
        <span
          className="css-1i2o39r-Truncated ejzgyku0"
        />
        <span
          className="components-visually-hidden css-1mm2cvy-View e19lxcc00"
          data-wp-c16t={true}
          data-wp-component="VisuallyHidden"
          style={
            Object {
              "WebkitClipPath": "inset( 50% )",
              "border": 0,
              "clip": "rect(1px, 1px, 1px, 1px)",
              "clipPath": "inset( 50% )",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "width": "1px",
              "wordWrap": "normal",
            }
          }
        >
          (opens in a new tab)
        </span>
        <svg
          aria-hidden={true}
          className="components-external-link__icon css-16iaek2-StyledIcon esh4a730"
          focusable={false}
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`<SitesGridItem> Default render 1`] = `
<div
  className="css-lvc9r-container"
>
  <a
    className="css-1ctre4x-ThumbnailLink e19s2eol0"
    href="/home/test_slug"
    title="Visit Dashboard"
  >
    <div
      className="site-thumbnail site-thumbnail-loading css-ut2tya-DEFAULT_CLASSNAME css-1mwzofc-siteThumbnail css-1uizeh6-disallowSelection"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="site-thumbnail-icon"
      >
        <div
          aria-label="Site Icon"
          className="css-k8j3dg-NoIcon e1y9o06l0"
          role="img"
        >
          T
        </div>
      </div>
    </div>
  </a>
  <div>
    <div
      className="css-1xtz7v6-primaryContainer"
    >
      <a
        className="css-6u0p2y-SiteName esmj6c50"
        fontSize={16}
        href="/home/test_slug"
        title="Visit Dashboard"
      >
        The example site
      </a>
      <div
        className="css-lnphaf-badges"
      >
        <div
          className="css-1j6mrwp-EllipsisMenuContainer eke2d2q0"
        />
      </div>
    </div>
    <div
      className="css-12bwudn-SitesGridItemSecondary eke2d2q1"
    >
      <a
        className="components-external-link css-d9p5eo-SiteUrl ejzgyku1"
        href=""
        onClick={[Function]}
        rel="external noreferrer noopener"
        target="_blank"
        title=""
      >
        <span
          className="css-1i2o39r-Truncated ejzgyku0"
        />
        <span
          className="components-visually-hidden css-1mm2cvy-View e19lxcc00"
          data-wp-c16t={true}
          data-wp-component="VisuallyHidden"
          style={
            Object {
              "WebkitClipPath": "inset( 50% )",
              "border": 0,
              "clip": "rect(1px, 1px, 1px, 1px)",
              "clipPath": "inset( 50% )",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "width": "1px",
              "wordWrap": "normal",
            }
          }
        >
          (opens in a new tab)
        </span>
        <svg
          aria-hidden={true}
          className="components-external-link__icon css-16iaek2-StyledIcon esh4a730"
          focusable={false}
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
